movement algorithm